kube-znn/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-znn-db
  labels:
    app: kube-znn-db
spec:
  selector:
    matchLabels:
      app: kube-znn-db
  template:
    metadata:
      labels:
        app: kube-znn-db
    spec:
      volumes:
      - name: init-db-config
        configMap:
          name: init-db-config
      containers:
      - image: mysql:5.7
        name: mysql
        volumeMounts:
        - name: init-db-config
          mountPath: /docker-entrypoint-initdb.d
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
